# OSCO

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  copy_od_gen_code.sh  osco.pc.in
.github/workflows/: cmake-build.yml  docker-build.yml
docker/: Dockerfile  docker-compose.yml
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/basic/: CANDriverWrapper.c  CMakeLists.txt  OSCOMutex.c  main.cpp
examples/basic-can-ip/: CMakeLists.txt  main.cpp
examples/basic-can-ip-non-threaded/: CANDriverWrapper.c  CANDriverWrapper.h  CMakeLists.txt  main.cpp
examples/basic-non-threaded/: CANDriverWrapper.c  CMakeLists.txt  main.cpp
examples/od/: master1.eds  master2.eds  mpdo_cons.eds  mpdo_prod.eds  slave1.eds  slave2.eds
examples/test-gen/node1/: OSCOGenOD.c  OSCOGenOD.h  OSCOGenOD_MaxValues.c  OSCOGenOD_Values.c  node1-od.eds
examples/test-gen/node2/: OSCOGenNodeID.h  OSCOGenOD.c  OSCOGenOD.h  OSCOGenOD_DefaultValues.c  OSCOGenOD_MinValues.c  OSCOGenOD_Values.c  node2-od.eds
inc/: OSCO.h  OSCOConfigDefines.h  OSCOErrorCodes.h  OSCOErrorCodes.hpp  OSCOInd.h  OSCOPrint.h  OSCOTypes.h  Version.h.in
src/: CMakeLists.txt  OSCOInit.c  OSCOMain.c  OSCOPrivate.h
src/StateMachine/: CMakeLists.txt
src/StateMachine/inc/: OSCOStateMachine.h
src/StateMachine/src/: StateMachine.c  StateMachinePrivate.h  StateMachineProcess.c  TransmitBootUpMsg.c
src/clock/: CMakeLists.txt
src/clock/inc/: OSCOClock.h
src/clock/src/: Clock.c  ClockMutex.c  ClockPrivate.h
src/core/: CMakeLists.txt
src/core/src/: OSCOInit.c  OSCOProcess.c
src/data/: CMakeLists.txt
src/data/inc/: OSCOData.h
src/data/src/: Data.c  DataPrivate.h
src/driver/: CANDriver.cpp  CANDriver.hpp  CMakeLists.txt
src/driver/inc/: OSCOCANDriver.h
src/driver/src/: CANDriver.c  CANDriverPrivate.h
src/heartbeat/: CMakeLists.txt
src/heartbeat/inc/: OSCOHeartbeat.h
src/heartbeat/src/: Heartbeat.c  HeartbeatPrivate.h
src/od/: CMakeLists.txt
src/od/inc/: OSCOOD.h  testOD.h
src/od/src/: ODAccess.c  ODPrivate.h  testOD.c  testODDefVals.c  testODMaxVals.c  testODMinVals.c  testODObjVals.c
src/pdo/: CMakeLists.txt
src/pdo/inc/: OSCOPDO.h
src/pdo/src/: PDOInd.c  PDOInit.c  PDOPrivate.h  PDOProcess.c  RPDO.c  TPDO.c
src/rxmgr/: CMakeLists.txt
src/rxmgr/inc/: OSCORxMgr.h
src/rxmgr/src/: RxMgr.c  RxMgrMutex.c  RxMgrPrivate.h
src/statemachine/: CMakeLists.txt
src/statemachine/inc/: OSCOStateMachine.h
src/statemachine/src/: StateMachine.c  StateMachinePrivate.h  TransmitBootUpMsg.c
src/sync/: CMakeLists.txt
src/sync/inc/: OSCOSync.h
src/sync/src/: Sync.c  SyncPrivate.h
tests/: CMakeLists.txt  main.c
